# fortran-rbf

./: .gitmodules  CMakeLists.txt
src/: const_mod.F90  distance_mod.F90  kernel_mod.F90  math_mod.F90  node_placing_mod.F90  prepare_nodes.F90  rbf_mod.F90  rbf_test.F90  resize_array_mod.F90
tools/: plot_ngb_matrix.ncl  plot_nodes.ncl
